fix overlapping text in appdynamics

--- a/ui/app/assets/plugins/monitor/solutions/appdynamics.less
+++ b/ui/app/assets/plugins/monitor/solutions/appdynamics.less
@@ -18,4 +18,8 @@
   p.err {
     color: @red;
   }
+  .downloading {
+    display: block;
+    .ellipsis();
+  }
 }
